lex/src/snapshots/luar_lex__token__test__fractional_number.snap
---
source: lex/src/token.rs
expression: tokens
---
[
    Number(
        NumberLiteral(
            4.23,
        ),
    ),
    Number(
        NumberLiteral(
            0.23,
        ),
    ),
    Number(
        NumberLiteral(
            4.0,
        ),
    ),
    Minus,
    Number(
        NumberLiteral(
            4.67,
        ),
    ),
    Minus,
    Number(
        NumberLiteral(
            0.25,
        ),
    ),
    Minus,
    Number(
        NumberLiteral(
            8.0,
        ),
    ),
    Plus,
    Number(
        NumberLiteral(
            0.24000000000000002,
        ),
    ),
    Plus,
    Number(
        NumberLiteral(
            5.0,
        ),
    ),
    Plus,
    Number(
        NumberLiteral(
            4.27,
        ),
    ),
    Comma,
    Minus,
    Number(
        NumberLiteral(
            0.12345678901234568,
        ),
    ),
]
