lex/src/snapshots/luar_lex__token__test__function_1.snap
---
source: lex/src/token.rs
expression: tokens
---
[
    Function,
    Ident(
        Ident(
            "remove_blanks",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "s",
        ),
    ),
    CloseRoundBracket,
    Local,
    Ident(
        Ident(
            "b",
        ),
    ),
    Assignment,
    Ident(
        Ident(
            "strfind",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "s",
        ),
    ),
    Comma,
    String(
        StringLiteral(
            " ",
        ),
    ),
    CloseRoundBracket,
    While,
    Ident(
        Ident(
            "b",
        ),
    ),
    Do,
    Ident(
        Ident(
            "s",
        ),
    ),
    Assignment,
    Ident(
        Ident(
            "strsub",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "s",
        ),
    ),
    Comma,
    Number(
        NumberLiteral(
            1.0,
        ),
    ),
    Comma,
    Ident(
        Ident(
            "b",
        ),
    ),
    Minus,
    Number(
        NumberLiteral(
            1.0,
        ),
    ),
    CloseRoundBracket,
    Concat,
    Ident(
        Ident(
            "strsub",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "s",
        ),
    ),
    Comma,
    Ident(
        Ident(
            "b",
        ),
    ),
    Plus,
    Number(
        NumberLiteral(
            1.0,
        ),
    ),
    CloseRoundBracket,
    Ident(
        Ident(
            "b",
        ),
    ),
    Assignment,
    Ident(
        Ident(
            "strfind",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "s",
        ),
    ),
    Comma,
    String(
        StringLiteral(
            " ",
        ),
    ),
    CloseRoundBracket,
    End,
    Return,
    Ident(
        Ident(
            "s",
        ),
    ),
    End,
]
