lex/src/snapshots/luar_lex__token__test__function_2.snap
---
source: lex/src/token.rs
expression: tokens
---
[
    Function,
    Ident(
        Ident(
            "f",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "t",
        ),
    ),
    CloseRoundBracket,
    Local,
    Ident(
        Ident(
            "i",
        ),
    ),
    Comma,
    Ident(
        Ident(
            "v",
        ),
    ),
    Assignment,
    Ident(
        Ident(
            "next",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "t",
        ),
    ),
    Comma,
    Nil,
    CloseRoundBracket,
    While,
    Ident(
        Ident(
            "i",
        ),
    ),
    Do,
    Ident(
        Ident(
            "i",
        ),
    ),
    Comma,
    Ident(
        Ident(
            "v",
        ),
    ),
    Assignment,
    Ident(
        Ident(
            "next",
        ),
    ),
    OpenRoundBracket,
    Ident(
        Ident(
            "t",
        ),
    ),
    Comma,
    Ident(
        Ident(
            "i",
        ),
    ),
    CloseRoundBracket,
    End,
    End,
]
