lex/src/snapshots/luar_lex__token__test__string_literal.snap
---
source: lex/src/token.rs
expression: tokens
---
[
    String(
        StringLiteral(
            "hello world \n \"nope\"",
        ),
    ),
]
