lex/src/snapshots/luar_lex__token__test__string_literal_with_mixed_quotes.snap
---
source: lex/src/token.rs
expression: tokens
---
[
    String(
        StringLiteral(
            "hello world \n \"nope\"",
        ),
    ),
    String(
        StringLiteral(
            "how 'bout this one?",
        ),
    ),
]
